Fixed responsive design issues; fixed footer covering text

--- a/stylesheets/about.sass
+++ b/stylesheets/about.sass
@@ -9,6 +9,8 @@
         text-transform: uppercase
         font-size: 24px
         margin-bottom: 0
+        @media screen and (max-width: 600px)
+            text-align: center
     p
         margin-top: 0
         font-family: $alt-font
@@ -31,7 +33,6 @@
             padding: 0 30px 0 0
 
 
-
     #programming
         float: left
         margin-left: 200px
@@ -39,7 +40,7 @@
             float: none
             margin-left: 0
             padding-top: 1px
-
+            padding-bottom: 70px
 
 #sidebar
     float: right
@@ -68,6 +69,4 @@
             outline-style: none
 
 #footer
-    margin-top: 30px
-    #copy-text
-        padding-top: 2px
+    margin-top: 60px
