--- a/stylesheets/portfolio.css
+++ b/stylesheets/portfolio.css
@@ -271,6 +271,7 @@ hr {
   font-weight: 300;
   max-width: 80%;
   margin: 0 auto 45px;
+  padding-bottom: 100px;
 }
 
 .container {
